src/test/ui/type-alias-impl-trait/structural-match.min_tait.stderr
error: `impl Send` cannot be used in patterns
  --> $DIR/structural-match.rs:19:9
   |
LL |         VALUE => (),
   |         ^^^^^

error: aborting due to previous error

